--- a/common/css/common.css
+++ b/common/css/common.css
@@ -637,7 +637,9 @@
 
 .reporter_card { max-width: 260px; margin: 0 auto; }
 
-.reporter_card_thumb_area { display: block; width: 200px; margin: 0 auto; margin-top: 10px; }
+.reporter_card_logo { margin-bottom: 10px; }
+
+.reporter_card_thumb_area { display: block; width: 200px; margin: 0 auto; }
 
 .reporter_card_thumb { padding-top: 100%; position: relative; }
 
@@ -649,9 +651,15 @@
 
 .reporter_card_id { margin-top: 18px; }
 
-.reporter_card_id .name { display: block; font-size: 30px; letter-spacing: -.3px; line-height: 34px; }
+.reporter_card_id .name { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; font-size: 30px; letter-spacing: -.3px; line-height: 34px; }
+
+.reporter_card_id .name .log_ico_sns { display: inline-block; width: 34px; height: 34px; border: 1px solid #ddd; border-radius: 4px; overflow: hidden; margin-right: 6px; }
+
+.reporter_card_id .name .log_ico_sns img { width: 100%; }
 
 .reporter_card_id .logo { display: block; margin-top: 9px; }
+
+.reporter_card_id .email { font-size: 18px; line-height: 1.33; margin-top: 10px; }
 
 .reporter_card_info { padding-top: 15px; margin-top: 20px; border-top: 1px solid #ccc; }
 
@@ -660,6 +668,12 @@
 .reporter_card_info .period { font-size: 12px; line-height: 1.42; letter-spacing: -0.12px; margin-top: 5px; color: #999; }
 
 .reporter_card_info .benefit { margin-top: 20px; font-size: 12px; font-weight: 500; line-height: 1.42; letter-spacing: -0.12px; color: #212121; }
+
+.reporter_card .add_img_set { margin-top: 20px; }
+
+.reporter_card .add_img_set p { margin-top: 10px; font-size: 14px; line-height: 20px; }
+
+.reporter_card .add_img_set p span { display: inline-block; font-size: 12px; }
 
 .mp_myinfo_cont { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; padding: 40px; border-radius: 0 0 6px 6px; }
 
@@ -671,13 +685,45 @@
 
 .mp_myinfo_right .mp_member_name { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
 
+.mp_myinfo_right .mp_member_name .log_ico_sns { width: 34px; height: 34px; -webkit-box-sizing: border-box; box-sizing: border-box; border: 1px solid #ddd; border-radius: 4px; overflow: hidden; margin-right: 6px; }
+
+.mp_myinfo_right .mp_member_name .log_ico_sns img { width: 100%; }
+
 .mp_myinfo_right .mp_member_name .name { font-size: 32px; line-height: 1.1; }
 
 .mp_myinfo_right .mp_member_name .tag_level { margin-left: 10px; }
 
 .mp_myinfo_right .mp_member_mail { margin-top: 10px; font-size: 18px; line-height: 1.33; }
 
-.mp_myinfo .reporter_card_wrap { padding: 40px 0; border: 1px solid #ddd; border-radius: 20px; }
+.mp_myinfo .reporter_card_wrap { padding: 40px 25px; border: 1px solid #ddd; border-radius: 20px; }
+
+.mp_myinfo .reporter_card { max-width: none; }
+
+.mp_myinfo .reporter_info { padding: 20px 0; }
+
+.mp_myinfo .reporter_info_btns { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; font-size: 0; margin: 0 -5px; margin-top: 30px; }
+
+.mp_myinfo .reporter_info_btns li { width: 50%; padding: 0 5px; -webkit-box-sizing: border-box; box-sizing: border-box; }
+
+.mp_myinfo .reporter_info_btn { height: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.16); box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.16); background-color: #fff; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; -webkit-box-sizing: border-box; box-sizing: border-box; padding: 15px 10px 20px; border-radius: 8px; -webkit-transition: all .1s ease-in-out; transition: all .1s ease-in-out; }
+
+.mp_myinfo .reporter_info_btn:hover { -webkit-transform: translateY(-2px); transform: translateY(-2px); -webkit-box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.16); box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.16); }
+
+.mp_myinfo .reporter_info_btn .ico_box { display: -webkit-box; display: -ms-flexbox; display: flex; height: 48px; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; }
+
+.mp_myinfo .reporter_info_btn .txt_box { display: inline-block; vertical-align: top; font-size: 14px; line-height: 20px; position: relative; margin-top: 4px; padding-right: 10px; }
+
+.mp_myinfo .reporter_info_btn .txt_box::after { content: ''; position: absolute; width: 6px; height: 10px; background-image: url(../../images/ico/arrow_next.svg); background-repeat: no-repeat; background-position: center center; right: 0; top: 50%; margin-top: -3px; }
+
+.mp_myinfo .reporter_info_top { text-align: center; }
+
+.mp_myinfo .reporter_info_top .log_msg { font-size: 17px; line-height: 1.65; letter-spacing: -0.17px; }
+
+.mp_myinfo .reporter_info_top .name { display: block; font-size: 24px; line-height: 27px; letter-spacing: -0.24px; color: #212121; }
+
+.mp_myinfo .reporter_info_top .desc { font-size: 17px; line-height: 1.4; letter-spacing: -0.17px; margin-top: 4px; }
+
+.mp_myinfo .reporter_info_top .caution { display: block; font-size: 12px; line-height: 1.42; letter-spacing: -0.12px; color: #999; margin-top: 5px; }
 
 .list_activity { max-height: 200px; overflow-y: auto; }
 
@@ -773,6 +819,52 @@
 
 .dsp_cont .point_info { margin-top: 40px; }
 
+.mp_greeting { padding: 40px; text-align: center; -webkit-box-sizing: border-box; box-sizing: border-box; }
+
+.mp_greeting_txt { font-size: 58px; line-height: 1.2; color: #f6c34b; font-weight: 300; }
+
+.mp_join .reporter_card_wrap { padding: 40px 0; }
+
+.mp_join_form { padding: 0 20px; border-top: 1px solid #fae1a4; border-bottom: 1px solid #fae1a4; }
+
+.mp_join_bot { padding: 30px 20px; }
+
+.form_sec { padding: 20px 0; }
+
+.form_sec + .form_sec { border-top: 1px solid #eee; }
+
+.form_sec .form_label { display: block; font-size: 15px; line-height: 21px; margin-bottom: 10px; font-weight: bold; }
+
+.form_sec .form_label .tag_required { display: inline-block; color: #ff5050; font-size: 12px; margin-left: 4px; font-weight: normal; vertical-align: top; }
+
+.form_sec .form_cont { display: -webkit-box; display: -ms-flexbox; display: flex; margin: 0 -5px; }
+
+.form_sec .form_cont + .form_cont { margin-top: 10px; }
+
+.form_sec .form_cont > * { margin: 0 5px; }
+
+.form_sec .form_cont .input_ty1 { -webkit-box-flex: 1; -ms-flex: 1; flex: 1; max-width: 200px; }
+
+.form_sec .form_cont .select_ty1 { max-width: 100px; }
+
+.form_sec .form_caution { margin-top: 10px; font-size: 12px; line-height: 17px; color: #666; }
+
+.form_sec .form_caution li { position: relative; padding-left: 12px; }
+
+.form_sec .form_caution li::before { content: '※'; position: absolute; left: 0; top: 0; }
+
+.form_sec .form_caution li + li { margin-top: 4px; }
+
+.form_responsive { border-top: 1px solid #fae1a4; }
+
+.form_responsive .form_sec { display: -webkit-box; display: -ms-flexbox; display: flex; }
+
+.form_responsive .form_sec .form_label { width: 200px; padding-right: 15px; -webkit-box-sizing: border-box; box-sizing: border-box; line-height: 40px; margin-bottom: 0; }
+
+.form_responsive .form_sec .form_cont_wrap { -webkit-box-flex: 1; -ms-flex: 1; flex: 1; }
+
+.form_responsive .form_sec .pw_current { padding-right: calc(50% + 5px); }
+
 @media (max-width: 1024px) { .mp_myinfo_cont { display: block; }
   .mp_myinfo_left { margin: 0 auto; width: auto; max-width: 360px; }
   .mp_myinfo_right { padding-left: 0; margin-top: 40px; } }
@@ -781,11 +873,12 @@
   .mp_myinfo_right .top_cont { display: block; }
   .mp_myinfo_right .top_cont .mp_member { text-align: center; margin-bottom: 20px; padding: 15px; background-color: #fef7e8; border-radius: 6px; border: 1px solid #fae1a4; }
   .mp_myinfo_right .top_cont .mp_member_name { -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; }
+  .mp_myinfo_right .top_cont .mp_member_name .log_ico_sns { width: 24px; height: 24px; margin-right: 4px; background-color: #fff; }
   .mp_myinfo_right .top_cont .mp_member_name .name { font-size: 20px; }
   .mp_myinfo_right .top_cont .mp_member_mail { font-size: 14px; margin-top: 5px; }
   .mp_myinfo_right .top_cont .btn_big { width: 100%; }
   .mp_myinfo_cont { padding: 20px; }
-  .dsp_cont { padding-bottom: 40px; border-bottom: none !important; }
+  .dsp_cont { padding-bottom: 40px; }
   .dsp_cont .sub_sec_tit { display: block; padding: 0; height: auto; }
   .dsp_cont .sub_sec_tit .tit { padding: 0 20px; height: 60px; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; border-bottom: 1px solid #fae1a4; }
   .dsp_cont .sub_sec_tit .lv_info { padding: 0 20px; display: block; }
@@ -797,7 +890,9 @@
   .dsp_cont .lv_box_status_item .txt_box { font-size: 11px; }
   .dsp_cont .lv_box_status_item .txt_box .lv_range { display: none; }
   .dsp_cont .lv_box_info { font-size: 13px; }
-  .dsp_cont .point_info { margin-top: 30px; } }
+  .dsp_cont .point_info { margin-top: 30px; }
+  .form_responsive .form_sec { display: block; }
+  .form_responsive .form_sec .form_label { line-height: 21px; margin-bottom: 10px; width: auto; padding-right: 0; } }
 
 /* 전체메뉴 */
 .btn_nav { z-index: 9999; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; width: 50px; height: 50px; position: absolute; left: -15px; top: 50%; -webkit-transform: translateY(-50%); transform: translateY(-50%); }
@@ -818,7 +913,7 @@
 
 .btn_nav.on .bar_box .bar.bot { width: 100%; -webkit-transform: rotate(-45deg); transform: rotate(-45deg); top: 6px; }
 
-.nav_all { display: none; position: fixed; left: 0; top: 0; width: 100%; background-color: #fff; padding: 0 40px; -webkit-box-sizing: border-box; box-sizing: border-box; }
+.nav_all { display: none; position: absolute; left: 0; top: 0; width: 100%; background-color: #fff; padding: 0 40px; -webkit-box-sizing: border-box; box-sizing: border-box; -webkit-box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.2); box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.2); z-index: 999; }
 
 .nav_all .close_nav_all { display: none; }
 
@@ -939,7 +1034,7 @@
 @media (max-width: 1024px) { .nav_all { padding: 0 30px; padding-right: 0; }
   .nav_all_list_wrap .btn_pp { right: 20px; width: 42%; } }
 
-@media (max-width: 767px) { .nav_all { display: block; z-index: 10000; padding: 0; width: 300px; overflow-y: auto; background-color: #fff; height: 100%; max-height: 100%; border-radius: 0 0 30px 0; -webkit-box-shadow: 0 16px 24px 0 rgba(0, 0, 0, 0.2); box-shadow: 0 16px 24px 0 rgba(0, 0, 0, 0.2); -webkit-transition: left .4s ease-in-out, opacity .4s ease-in-out; transition: left .4s ease-in-out, opacity .4s ease-in-out; top: 0; left: -330px; }
+@media (max-width: 767px) { .nav_all { display: block; position: fixed; z-index: 10000; padding: 0; width: 300px; overflow-y: auto; background-color: #fff; height: 100%; max-height: 100%; border-radius: 0 0 30px 0; -webkit-box-shadow: 0 16px 24px 0 rgba(0, 0, 0, 0.2); box-shadow: 0 16px 24px 0 rgba(0, 0, 0, 0.2); -webkit-transition: left .4s ease-in-out, opacity .4s ease-in-out; transition: left .4s ease-in-out, opacity .4s ease-in-out; top: 0; left: -330px; }
   .nav_all.on { left: 0; }
   .nav_all .close_nav_all { display: block; position: absolute; z-index: 10; width: 50px; height: 50px; right: 0; top: 0; background: url(../../images/nav_all/close_nav_all.svg) no-repeat center center; }
   .nav_all_inner { display: block; }
@@ -1178,7 +1273,9 @@
 
 .sub_sec { background-color: #fff; border-radius: 6px; }
 
-.sub_sec_wrap { display: -webkit-box; display: -ms-flexbox; display: flex; margin-left: -5px; margin-right: -5px; }
+.sub_sec_wrap { display: -webkit-box; display: -ms-flexbox; display: flex; margin-left: -5px; margin-right: -5px; margin-top: -10px; }
+
+.sub_sec + .sub_sec_wrap, .sub_sec_wrap + .sub_sec_wrap { margin-top: 0; }
 
 .sub_sec_wrap .sec { margin-left: 5px; margin-right: 5px; }
 
@@ -1202,7 +1299,9 @@
 
 .sub_sec_tit.no_bd { border-bottom: none; }
 
-.sub_sec_btns { padding: 30px 0; border-top: 1px solid #fae1a4; }
+.sub_sec_btns { padding: 30px 0; border-top: 1px solid #fae1a4; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; }
+
+.sub_sec_btns [class^=btn] { margin: 0 5px; }
 
 /* btns */
 .btn_area { font-size: 0; }
@@ -1269,9 +1368,13 @@
 
 .btn_mid.white { color: #f6c34b; background-color: #fff; }
 
+.btn_mid.l_red { background-color: #fff; border-color: #ff5050; color: #ff5050; }
+
 .btn_big { display: inline-block; vertical-align: top; height: 50px; line-height: 48px; -webkit-box-sizing: border-box; box-sizing: border-box; border-radius: 4px; border: 1px solid #f6c34b; background-color: #f6c34b; text-align: center; padding: 0 20px; min-width: 120px; color: #fff; font-size: 16px; font-weight: 500; }
 
 .btn_big.white { color: #f6c34b; background-color: #fff; }
+
+.btn_big.white2 { color: #424242; background-color: #fff; border-color: #ccc; }
 
 .btn_big.red { background-color: #ff5050; }
 
@@ -1699,6 +1802,10 @@
 
 .limit_info .current { color: #777; }
 
+.chk_agree { display: inline-block; position: relative; vertical-align: top; padding-left: 22px; font-size: 12px; line-height: 1.4; }
+
+.chk_agree input[type="checkbox"] { position: absolute; left: 0; top: 0; }
+
 .sc_check { display: inline-block; position: relative; }
 
 .sc_check input[type="checkbox"] { position: absolute; z-index: -999; left: 0; top: 0; opacity: 0; }
@@ -1823,6 +1930,7 @@
   .sub_nav_item { height: 44px; }
   .sub_sec_tit { padding: 0 20px; height: 60px; }
   .sub_sec.ty_bd { border-radius: 0; border-left: none; border-right: none; }
+  .sub_sec.ty_bd.m_bb_n { border-bottom: none; }
   .sub_sec_inner { padding: 0 20px; }
   .sub_sec_inner.ty2 { padding: 20px; }
   .pp_tbl.ty1 td, .pp_tbl.ty1 th { height: 40px; }
