--- a/common/scss/_mypage.scss
+++ b/common/scss/_mypage.scss
@@ -30,6 +30,18 @@
             &_name {
                 display: flex;
                 align-items: center;
+                .log_ico_sns {
+                    width: 34px;
+                    height: 34px;
+                    box-sizing: border-box;
+                    border: 1px solid #ddd;
+                    border-radius: 4px;
+                    overflow: hidden;
+                    margin-right: 6px;
+                    img {
+                        width: 100%;
+                    }
+                }
                 .name {
                     font-size: 32px;
                     line-height: 1.1;
@@ -49,11 +61,107 @@
 
 
     .reporter_card_wrap {
-        padding: 40px 0;
+        padding: 40px 25px;
         border: 1px solid #ddd;
         border-radius: 20px;
     }
+    .reporter_card {
+        max-width: none;
+    }
+
+    .reporter_info {
+        padding: 20px 0;
+        &_btns {
+            display: flex;
+            justify-content: center;
+            font-size: 0;
+            margin: 0 -5px;
+            margin-top: 30px;
+            li {
+                //max-width: 170px;
+                width: 50%;
+                padding: 0 5px;
+                box-sizing: border-box;
+            }
+        }
+        &_btn {
+            height: 100%;
+            display: flex;
+            box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.16);
+            background-color: #fff;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+            box-sizing: border-box;
+            padding: 15px 10px 20px;
+            border-radius: 8px;
+            transition: all .1s ease-in-out;
+            &:hover {
+                transform: translateY(-2px);
+                box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.16);
+            }
+            .ico_box {
+                display: flex;
+                height: 48px;
+                align-items: center;
+                justify-content: center;
+            }
+            .txt_box {
+                display: inline-block;
+                vertical-align: top;
+                font-size: 14px;
+                line-height: 20px;
+                position: relative;
+                margin-top: 4px;
+                padding-right: 10px;
+                &::after {
+                    content:'';
+                    position: absolute;
+                    width: 6px;
+                    height: 10px;
+                    background-image: url(../../images/ico/arrow_next.svg);
+                    background-repeat: no-repeat;
+                    background-position: center center;
+                    right: 0;
+
+                    top: 50%;
+                    margin-top: -3px;
+                }
+            }
+        }
+        &_top {
+            text-align: center;
+            .log_msg {
+                font-size: 17px;
+                line-height: 1.65;
+                letter-spacing: -0.17px;
+            }
+            .name {
+                display: block;
+                font-size: 24px;
+                line-height: 27px;
+                letter-spacing: -0.24px;
+                color: #212121;
+            }
+            .desc {
+                font-size: 17px;
+                line-height: 1.4;
+                letter-spacing: -0.17px;
+                margin-top: 4px;
+            }
+            .caution {
+                display: block;
+                font-size: 12px;
+                line-height: 1.42;
+                letter-spacing: -0.12px;
+                color: #999;
+                margin-top: 5px;
+            }
+        }
+    }
 }
+
+
 
 
 
@@ -270,6 +378,112 @@
     }
 }
 
+.mp_greeting {
+    padding: 40px;
+    text-align: center;
+
+    box-sizing: border-box;
+    &_txt {
+        font-size: 58px;
+        line-height: 1.2;
+        color: $c_key;
+        font-weight: 300;
+    }
+}
+
+.mp_join {
+    .reporter_card_wrap {
+        padding: 40px 0;
+    }
+    &_form {
+        padding: 0 20px;
+        border-top: 1px solid $c_key2;
+        border-bottom: 1px solid $c_key2;
+    }
+    &_bot {
+        padding: 30px 20px;
+    }
+}
+
+.form_sec {
+    padding: 20px 0;
+
+    & + & {
+        border-top: 1px solid #eee;
+    }
+    .form_label {
+        display: block;
+        font-size: 15px;
+        line-height: 21px;
+        margin-bottom: 10px;
+        font-weight: bold;
+        .tag_required {
+            display: inline-block;
+            color: #ff5050;
+            font-size: 12px;
+            margin-left: 4px;
+            font-weight: normal;
+            vertical-align: top;
+        }
+    }
+    .form_cont {
+        display: flex;
+        margin: 0 -5px;
+        & + .form_cont {
+            margin-top: 10px;
+        }
+        & > * {
+            margin: 0 5px;
+        }
+        .input_ty1 {
+            flex: 1;
+            max-width: 200px;
+        }
+        .select_ty1 {
+            max-width: 100px;
+        }
+    }
+    .form_caution {
+        margin-top: 10px;
+        font-size: 12px;
+        line-height: 17px;
+        color: #666;
+        li {
+            position: relative;
+            padding-left: 12px;
+            &::before {
+                content:'※';
+                position: absolute;
+                left: 0;
+                top: 0;
+            }
+            & + li {
+                margin-top: 4px;
+            }
+        }
+    }
+}
+
+.form_responsive {
+    border-top: 1px solid $c_key2;
+    .form_sec {
+        display: flex;
+        .form_label {
+            width: 200px;
+            padding-right: 15px;
+            box-sizing: border-box;
+            line-height: 40px;
+            margin-bottom: 0;
+        }
+        .form_cont_wrap {
+            flex: 1;
+        }
+        .pw_current {
+            padding-right: calc(50% + 5px);
+        }
+    }
+}
+
 
 
 @media (max-width:1024px) {
@@ -291,10 +505,9 @@
 }
 
 @media (max-width: 767px) {
+
+
     .mp_myinfo {
-
-
-
         &_right {
             margin-top: 30px;
             .top_cont {
@@ -308,6 +521,12 @@
                     border: 1px solid $c_key2;
                     &_name {
                         justify-content: center;
+                        .log_ico_sns {
+                            width: 24px;
+                            height: 24px;
+                            margin-right: 4px;
+                            background-color: #fff;
+                        }
                         .name {
                             font-size: 20px;
                         }
@@ -333,7 +552,7 @@
 
     .dsp_cont {
         padding-bottom: 40px;
-        border-bottom: none !important;
+
         .sub_sec_tit {
             display: block;
             padding: 0;
@@ -383,6 +602,30 @@
         }
         .point_info {
             margin-top: 30px;
+        }
+    }
+
+    .form_responsive {
+        .form_sec {
+            display: block;
+            .form_label {
+                line-height: 21px;
+                margin-bottom: 10px;
+                width: auto;
+                padding-right: 0;
+            }
+            // .pw_current {
+            //     padding-right: 0;
+            // }
+            // .pw_new {
+            //     display: block;
+            //     .input_ty1 {
+            //         display: block;
+            //         & + .input_ty1 {
+            //             margin-top: 10px;
+            //         }
+            //     }
+            // }
         }
     }
 }
