--- a/common/scss/_nav_all.scss
+++ b/common/scss/_nav_all.scss
@@ -57,13 +57,15 @@
 .nav_all {
 
     display: none;
-    position: fixed;
+    position: absolute;
     left: 0;
     top: 0;
     width: 100%;
     background-color: #fff;
     padding: 0 40px;
     box-sizing: border-box;
+    box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.2);
+    z-index: 999;
 
     .close_nav_all {
         display: none;
@@ -467,6 +469,7 @@
 @media (max-width:767px) {
     .nav_all {
         display: block;
+        position: fixed;
         z-index: 10000;
         padding: 0;
         width: 300px;
