--- a/common/scss/_reporter.scss
+++ b/common/scss/_reporter.scss
@@ -1,11 +1,15 @@
+
+
 .reporter_card {
     max-width: 260px;
     margin: 0 auto;
+    &_logo {
+        margin-bottom: 10px;
+    }
     &_thumb_area {
         display: block;
         width: 200px;
         margin: 0 auto;
-        margin-top: 10px;
     }
     &_thumb {
         padding-top: 100%;
@@ -55,14 +59,33 @@
     &_id {
         margin-top: 18px;
         .name {
-            display: block;
+            display: flex;
+            align-items: center;
+            justify-content: center;
             font-size: 30px;
             letter-spacing: -.3px;
             line-height: 34px;
+            .log_ico_sns {
+                display: inline-block;
+                width: 34px;
+                height: 34px;
+                border: 1px solid #ddd;
+                border-radius: 4px;
+                overflow: hidden;
+                margin-right: 6px;
+                img {
+                    width: 100%;
+                }
+            }
         }
         .logo {
             display: block;
             margin-top: 9px;
+        }
+        .email {
+            font-size: 18px;
+            line-height: 1.33;
+            margin-top: 10px;
         }
     }
     &_info {
@@ -90,4 +113,18 @@
             color: #212121;
         }
     }
+
+    .add_img_set {
+        margin-top: 20px;
+        p {
+            margin-top: 10px;
+            font-size: 14px;
+            line-height: 20px;
+            span {
+                display: inline-block;
+                font-size: 12px;
+            }
+        }
+    }
+
 }
