--- a/common/scss/_nav_all.scss
+++ b/common/scss/_nav_all.scss
@@ -66,7 +66,7 @@
     box-sizing: border-box;
     box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.2);
     z-index: 999;
-
+    overflow: hidden;
     .close_nav_all {
         display: none;
     }
@@ -187,7 +187,7 @@
             display: block;
             width: 100%;
             height: 40px;
-            background-color: $c_key;
+            background-color: #f6c34b;
             border-radius: 6px;
             color: #fff;
             font-size: 14px;
@@ -199,7 +199,7 @@
         .btn_join {
             display: block;
             width: 100%;
-            border: 1px solid $c_key;
+            border: 1px solid #f6c34b;
             border-radius: 6px;
             height: 40px;
             box-sizing: border-box;
@@ -219,7 +219,7 @@
                 width: 120px;
                 height: 120px;
                 margin: 0 auto;
-                border: 4px solid $c_key;
+                border: 4px solid #f6c34b;
                 box-sizing: border-box;
                 border-radius: 20px;
                 overflow: hidden;
@@ -300,7 +300,7 @@
             width: 90px;
 
             box-sizing: border-box;
-            border: 1px solid $c_key;
+            border: 1px solid #f6c34b;
             border-radius: 6px;
             background-color: #fff;
             display: flex;
@@ -590,7 +590,7 @@
                 margin-left: -1px;
                 margin-top: 0;
                 justify-content: flex-start;
-                border-top: 1px solid $c_key;
+                border-top: 1px solid #f6c34b;
             }
             &_btn {
                 &.m_only {
@@ -600,7 +600,7 @@
                 max-width: 50%;
                 border: none;
                 border-radius: 0;
-                border-left: 1px solid $c_key;
+                border-left: 1px solid #f6c34b;
                 box-sizing: border-box;
                 height: 80px;
 
@@ -614,7 +614,7 @@
 
             height: 40px;
             padding: 0 20px;
-            background-color: $c_key;
+            background-color: #f6c34b;
             align-items: center;
             .logo {
                 width: 94px;
