--- a/common/scss/_mypage.scss
+++ b/common/scss/_mypage.scss
@@ -446,6 +446,10 @@
             width: 100px;
             padding: 0;
         }
+        .form_msg {
+            font-size: 12px;
+            line-height: 18px;
+        }
     }
     .form_caution {
         margin-top: 10px;
