--- a/common/css/pp_common.css
+++ b/common/css/pp_common.css
@@ -180,7 +180,9 @@
   .nav_all_item.on .nav_all_dep2 { display: block; }
   .nav_all_dep2_item { display: inline-block; vertical-align: top; margin-left: 30px; } }
 
-.pp_popup { position: fixed; width: 100%; height: 100%; left: 0; top: 0; z-index: 9999; background-color: rgba(0, 0, 0, 0.4); }
+.pp_popup { display: none; position: fixed; width: 100%; height: 100%; left: 0; top: 0; z-index: 9999; background-color: rgba(0, 0, 0, 0.4); }
+
+.pp_popup.on { display: block; }
 
 .pp_popup_inner { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; width: 100%; height: 100%; -webkit-box-sizing: border-box; box-sizing: border-box; padding: 20px; }
 
