--- a/common/scss/_pp_popup.scss
+++ b/common/scss/_pp_popup.scss
@@ -1,4 +1,5 @@
 .pp_popup {
+    display: none;
     position: fixed;
     width: 100%;
     height: 100%;
@@ -6,6 +7,11 @@
     top: 0;
     z-index: 9999;
     background-color: rgba(0,0,0,.4);
+
+    &.on {
+        display: block;
+    }
+
     &_inner {
         display: flex;
         align-items: center;
